add front end to login page

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,7 +1,46 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-
+<div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col">
+        <div class="loginWrapStyle text-center">
+          <img class="logoStyle" src="../../assets/images/civicd_logo_full.svg" alt="Civicd Logo" />
+        </div>
+      </div>
+     </div>
+     <div class="row justify-content-center formRow">
+      <div class="col-md-5">
+      <div class="text-center">
+        <form class="formStyle">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1"><img src="../../assets/icons/user_icon.svg" class="userIcon"/></span>
+            </div>
+            <input type="text" class="form-control" placeholder="USERNAME" aria-label="Username" aria-describedby="basic-addon1">
+          </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1"><img src="../../assets/icons/lock_icon.svg" class="userIcon"/></span>
+            </div>
+            <input type="text" class="form-control" placeholder="PASSWORD" aria-label="Password" aria-describedby="basic-addon2">
+          </div>
+        </form>
+        <div *ngIf="loginErrMsg != ''" class="text-center errorMsgStyle">
+          {{loginErrMsg}}
+        </div>
+        <div text-center>
+          <button (click)="logUserIn()" class="logInBtn" ion-button primary type="submit">Sign In</button>
+        </div>
+        <div text-center>
+          <button class="registerBtn" ion-button color="light" type="button" round routerLink="startRegister">Create Account</button>
+        </div>
+        <div class="orgFootWrap">
+          <p>
+            Have an organization?
+          </p>
+          <p>
+            <a routerLink="inviteRequest"><strong>Get an invite</strong></a> and post your event!
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
