add registration page with styling and connect to backend

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -30,14 +30,14 @@
           <button (click)="logUserIn(f)" class="logInBtn" ion-button primary type="submit">Sign In</button>
         </div>
         <div text-center>
-          <button class="registerBtn" ion-button color="light" type="button" round routerLink="startRegister">Create Account</button>
+          <button class="registerBtn" ion-button color="light" type="button" round routerLink="/chooseregistration">Create Account</button>
         </div>
         <div class="orgFootWrap">
           <p>
             Have an organization?
           </p>
           <p>
-            <a routerLink="inviteRequest"><strong>Get an invite</strong></a> and post your event!
+            <a routerLink="/inviteRequest"><strong>Get an invite</strong></a> and post your event!
           </p>
         </div>
       </div>
