--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,13 +38,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-4 text-center">
+      <div class="col-md-4 text-center">
         <div *ngFor="let tags of firstColArr"><span class="badge tagStyle"><strong>#{{tags?.Name}}</strong></span></div>
       </div>
-      <div class="col-4 text-center">
+      <div class="col-md-4 text-center">
         <div *ngFor="let tags of secondColArr"><span class="badge tagStyle"><strong>#{{tags?.Name}}</strong></span></div>
       </div>
-      <div class="col-4 text-center">
+      <div class="col-md-4 text-center">
         <div *ngFor="let tags of thirdColArr"><span class="badge tagStyle"><strong>#{{tags?.Name}}</strong></span></div>
       </div>
     </div>
