--- a/src/app/get-civicd/get-civicd.component.html
+++ b/src/app/get-civicd/get-civicd.component.html
@@ -14,37 +14,37 @@
         <h1 class="sectionHead">Important Election Dates</h1>
       </div>
     </div>
-    <div class="row upperCalendar">
-      <div class="col-2">
+    <div class="row">
+      <div class="col-2 upperCalendar">
         <i><img src="../../assets/icons/calendar.svg"></i>
       </div>
-      <div class="col-4">
+      <div class="col-4 upperCalendar">
         <div class="electionHead"><strong>Election Type</strong></div>
         <div class="subElectionHead">Voting Hours</div>
         <div class="subElectionHead">Early Voting</div>
       </div>
-      <div class="col-2">
+      <div class="col-2 upperCalendar">
         <i><img src="../../assets/icons/calendar.svg"></i>
       </div>
-      <div class="col-4">
+      <div class="col-4 upperCalendar">
         <div class="electionHead"><strong>Election Type</strong></div>
         <div class="subElectionHead">Voting Hours</div>
         <div class="subElectionHead">Early Voting</div>
       </div>
     </div>
-    <div class="row bottomCalendar">
-      <div class="col-2">
+    <div class="row">
+      <div class="col-2 bottomCalendar">
         <i><img src="../../assets/icons/calendar.svg"></i>
       </div>
-      <div class="col-4">
+      <div class="col-4 bottomCalendar">
         <div class="electionHead"><strong>Election Type</strong></div>
         <div class="subElectionHead">Voting Hours</div>
         <div class="subElectionHead">Early Voting</div>
       </div>
-      <div class="col-2">
+      <div class="col-2 bottomCalendar">
         <i><img src="../../assets/icons/calendar.svg"></i>
       </div>
-      <div class="col-4">
+      <div class="col-4 bottomCalendar">
         <div class="electionHead"><strong>Election Type</strong></div>
         <div class="subElectionHead">Voting Hours</div>
         <div class="subElectionHead">Early Voting</div>
