--- a/src/app/navbar-default/navbar-default.component.html
+++ b/src/app/navbar-default/navbar-default.component.html
@@ -6,6 +6,6 @@
       <button [ngClass]="{activeBtn: homePage.active}"  routerLink="/home" type="button" class="btnStyle">Home</button>
       <button [ngClass]="{activeBtn: eventsPage.active}" routerLink="/allevents" type="button" class="btnStyle">Events</button>
       <button [ngClass]="{activeBtn: getCivicdPage.active}" routerLink="/getcivicd" type="button" class="btnStyle">Get Civic'd</button>
-      <button type="button" class="btnStyle">Log Out</button>
+      <button (click)="logOut()" type="button" class="btnStyle">Log Out</button>
     </div>
   </div>
